src/components/Intro/index.scss
.intro-text {
  padding: 3.5rem 5.5rem;
  min-height: 250px;
  margin: 0 auto;
  h1 {
    color: #fff;
    font-size: 2.5rem;
    margin: 0;
    font-family: Coolvetica;
    font-weight: 500;

    &::after {
      content: "|";
      color: #fff;
      padding-bottom: 10px;
      font-size: 2.5rempx;
      animation: blink 1s step-start infinite;
    }
  }
}

@keyframes blink {
  50% {
    opacity: 0;
  }
}

